--- a/calculadora1.html
+++ b/calculadora1.html
@@ -7,29 +7,51 @@
 <link href="https://fonts.googleapis.com/css2?family=Turret+Road:wght@200&display=swap" rel="stylesheet">
 </head>
 <body onload="init();">
+    
+    <!--guia para la elaboracion de la calculadora:https://www.youtube.com/watch?v=NLWf8RUwVH8-->
 
 <table class="calculadora">
+
 <tr>
   <td colspan="4"><span id="resultado"></span></td>
 </tr>
+
 <tr>
-  <td><button id="siete">7</button></td><td><button id="ocho">8</button></td><td><button id="nueve">9</button></td><td><button id="division">/</button></td>
+  <td><button id="siete">7</button></td>
+  <td><button id="ocho">8</button></td>
+  <td><button id="nueve">9</button></td>
+  <td><button id="division">/</button></td>
 </tr>
+
 <tr>
-  <td><button id="cuatro">4</button></td><td><button id="cinco">5</button></td><td><button id="seis">6</button></td><td><button id="multiplicacion">*</button></td>
+  <td><button id="cuatro">4</button></td>
+  <td><button id="cinco">5</button></td>
+  <td><button id="seis">6</button></td>
+  <td><button id="multiplicacion">*</button></td>
 </tr>
+
 <tr>
-  <td><button id="uno">1</button></td><td><button id="dos">2</button></td><td><button id="tres">3</button></td><td><button id="resta">-</button></td>
+  <td><button id="uno">1</button></td>
+  <td><button id="dos">2</button></td>
+  <td><button id="tres">3</button></td>
+  <td><button id="resta">-</button></td>
 </tr>
+
 <tr>
-  <td><button id="igual">=</button></td><td><button id="reset">C</button></td><td><button id="cero">0</button></td><td><button id="suma">+</button></td>
+  <td><button id="igual">=</button>
+</td><td><button id="reset">C</button>
+</td><td><button id="cero">0</button></td>
+<td><button id="suma">+</button></td>
 </tr>
-<td colspan="4"><span id="marca">calculator</span></td>
+
+<tr>
+<td colspan="4"><span id="marca">calculator by: Aylin Parra</span></td>
 </tr>
-</table>
+
 
 </table>
 
 <script src="funcionalidades.js"></script>
+
 </body>
 </html>
