--- a/memoria.html
+++ b/memoria.html
@@ -9,7 +9,7 @@
 
 <body>
 <div id="fondo">
-<h2>Memoria</h2>
+<h2>Memory</h2>
 <h3>Debemos recordar la secuencia de ciruclos azules y <br>
 hacer clic repitiendo la secuancia</h3>
 <div class="contenedor">
