--- a/memoria.html
+++ b/memoria.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
+
 <title>Juego Memoria</title>
 <script src="http://code.jquery.com/jquery-1.11.2.js"language="javascript" type="text/javascript"></script> 
 <script src="memoria.js" language="javascript" type="text/javascript"></script>
@@ -16,5 +18,6 @@ hacer clic repitiendo la secuancia</h3>
 <div class="juego"></div> 
 </div>
 </div>
+
 </body>
 </html>
